src/objects/Charge__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains list of Delivery Charge and Vendor Credit for a specific Singpost Address Type</description>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Type_c__c</fullName>
        <label>House_Type__c</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Charges</label>
</CustomObject>